feat: add holystone ores to ore item tags